<resources>
    <string name="app_name">FoodTracker</string>
    <string name="calendar">Calendar</string>
    <string name="recipes">Recipes</string>
    <string name="shopping_list">Shopping List</string>
    <string name="main_fab_rotation">Rotation</string>
    <string name="float_icon">Float fab button</string>
    <string name="main_fab_button">Main fab button</string>
    <string name="delete">Delete selected</string>
    <string name="select">Select all</string>
    <string name="unselect">Unselect all</string>
    <string name="confirm_delete">Confirm delete action</string>
    <string name="delete_text">Are you sure you want to delete the selected items?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="no_itmes_toast">Select items before deleting</string>
</resources>